examples/test/testpolicy7563.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7563
  namespace: namespace212
spec:
  podSelector:
    matchLabels:
      key6: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value19
          key2: value36
          key38: value2
      podSelector:
        matchLabels:
          key47: value0
          key36: value7
          key49: value4
